--- a/wwwroot/css/sidebar.css
+++ b/wwwroot/css/sidebar.css
@@ -1,3 +1,8 @@
+label {
+    font-size: 14px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .sidebar-size{
     width: 15%;
     height: 100%;
