--- a/Views/Admin/Partial/FormInfo.cshtml
+++ b/Views/Admin/Partial/FormInfo.cshtml
@@ -1,3 +1,4 @@
+<p class="text-center fs-3">Provide General Details</p>
 <div class="container bg-white rounded-border shadow p-5 width-50">
     <label for="Service Name">Service Name</label>
     <input class="form-control mb-3" type="text" name="serviceName" id="serviceName" placeholder="Service Name">
