Combined Tables Into One

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -45,15 +45,15 @@
 
     <div class="row w-100">
         <div class="col-sm-4">
-            <label for="Service">Service</label>
-            <select class="form-select" name="service" id="service">
-                <option value="">Select Service</option>
+            <label for="District">District</label>
+            <select class="form-select bg-white" name="district" id="district" disabled>
+                <option value="">Select District</option>
             </select>
         </div>
         <div class="col-sm-4">
-            <label for="District">District</label>
-            <select class="form-select" name="district" id="district">
-                <option value="">Select District</option>
+            <label for="Service">Service</label>
+            <select class="form-select" name="service" id="service">
+                <option value="">Select Service</option>
             </select>
         </div>
         <div class="col-sm-4">
