--- a/Views/Admin/Create.cshtml
+++ b/Views/Admin/Create.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Create Service";
 }
 
-<div class="container-fluid center-align flex-column gap-5 py-5">
+<div class="container-fluid center-align flex-column gap-5 py-5 h-100">
     <div id="FormInfo" class="w-100">
         <partial name="Partial/FormInfo.cshtml" />
     </div>
