--- a/Views/Profile/Settings.cshtml
+++ b/Views/Profile/Settings.cshtml
@@ -1,3 +1,8 @@
+@{
+    Layout = ViewData["Layout"]?.ToString() ?? "_Layout";
+}
+
+
 <div class="full-screen-section center-align">
     <div class="container center-align flex-column width-50 rounded-border shadow p-3 gap-3">
         <p class="fs-4 fw-bold">Backup Codes</p>
