--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -112,9 +112,10 @@ p{
 .custom-card{
     padding: 1.5rem;
     border-radius: 3px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: white;
 }
 
