--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 
-<div class="container-fluid center-align flex-column gap-4 py-5">
+<div class="container-fluid d-flex flex-column gap-5 py-4">
     @* <div class="row w-100">
     <div class="col-md-3">
     <div class="custom-card">
@@ -43,7 +43,7 @@
     </div>
     </div> *@
 
-    <div class="row w-100">
+    <div class="row w-100 mx-auto">
         <div class="col-sm-4">
             <label for="District">District</label>
             <select class="form-select bg-white" name="district" id="district" disabled>
@@ -64,51 +64,75 @@
         </div>
     </div>
 
-    <div class="row w-100">
-        <div class="col-md-3">
-            <div class="custom-card">
-                <p class="fs-1"><i class="fa-solid fa-file-pen text-info"></i></p>
-                <p class="d-flex flex-column">
-                    <span class="fs-5">Total</span>
-                    <span class="fs-2 fw-bold" id="total">20</span>
-                </p>
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row w-100 justify-content-between">
+            <div class="col-md-2">
+                <div class="custom-card flex-column py-5 bg-primary text-white fs-3">
+                    <span class="d-flex gap-2 justify-content-between">
+                        <p class="icon"><i class="fa-solid fa-file-pen"></i></p>
+                        <p class="text">Total</p>
+                    </span>
+                    <p class="value fs-2 fw-bold d-flex justify-content-center" id="total">20</p>
+                </div>
+            </div>
+            <div class="col-md-2 ">
+                <div class="custom-card flex-column py-5 bg-success text-white fs-3">
+                    <span class="d-flex gap-2 justify-content-between">
+                        <p class="icon"><i class="fa-solid fa-flag-checkered"></i></p>
+                        <p class="text">Sanctioned</p>
+                    </span>
+                    <p class="value fs-2 fw-bold d-flex justify-content-center" id="sanction">20</p>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="custom-card flex-column fs-3 py-5 bg-warning text-dark">
+                    <span class="d-flex gap-2 justify-content-between">
+                        <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
+                        <p class="text">Pending</p>
+                    </span>
+                    <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pending">20</p>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="custom-card flex-column fs-3 py-5 bg-info text-white">
+                    <span class="d-flex gap-2 justify-content-between">
+                        <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
+                        <p class="text">With Citizen</p>
+                    </span>
+                    <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pendingWithCitizen">20</p>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="custom-card flex-column fs-3 py-5 bg-danger text-white">
+                    <span class="d-flex gap-2 justify-content-between">
+                        <p class="icon"><i class="fa-solid fa-ban"></i></p>
+                        <p class="text">Rejected</p>
+                    </span>
+                    <p class="value fs-2 fw-bold  d-flex justify-content-center" id="rejected">20</p>
+                </div>
             </div>
         </div>
-        <div class="col-md-3">
-            <div class="custom-card">
-                <p class="fs-1"><i class="fa-solid fa-flag-checkered text-success fs-1"></i></p>
-                <p class="d-flex flex-column">
-                    <span class="fs-5">Sanctioned</span>
-                    <span class="fs-2 fw-bold" id="sanction">20</span>
-                </p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="custom-card">
-                <p class="fs-1"><i class="fa-solid fa-hourglass-half text-warning fs-1"></i></p>
-                <p class="d-flex flex-column">
-                    <span class="fs-5">Pending</span>
-                    <span class="fs-2 fw-bold" id="pending">20</span>
-                </p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="custom-card">
-                <p class="fs-1"><i class="fa-solid fa-ban text-danger fs-1"></i></p>
-                <p class="d-flex flex-column">
-                    <span class="fs-5">Rejected</span>
-                    <span class="fs-2 fw-bold" id="rejected">20</span>
-                </p>
-            </div>
-        </div>
-
     </div>
 
     <div class="row w-100">
-        <div class="col-md-4 offset-md-4">
-            <div class="custom-card">
-                <canvas id="myChart" width="600" height="500"></canvas>
+        <div class="col-md-4 offset-md-2">
+            <div class="custom-card flex-column bg-white text-dark">
+                <canvas id="myChart" height="500" width="500"></canvas>
             </div>
+            <div class="custom-card d-flex flex-column mt-2">
+                <div class="d-flex gap-3">
+                    <p>District: <span class="fw-bold" id="chartDistirct"></span></p>
+                    <p>Officer: <span class="fw-bold" id="chartOfficer">All</span></p>
+                </div>
+                <p>Service: <span class="fw-bold" id="chartService">All</span></p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="custom-card flex-column">
+                <canvas id="allDistrict" height="500" width="500"></canvas>
+            </div>
+            <p class="custom-card text-center fw-bold mt-2">All District Data</p>
         </div>
     </div>
 </div>
