--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -30,7 +30,8 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-dark width-25 mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Take
+    <button id="takeAction" class="btn btn-dark width-25 mt-4" data-bs-toggle="modal"
+        data-bs-target="#exampleModal">Take
         Action</button>
 </div>
 
