Some minor change

--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -27,6 +27,21 @@
                         <p class="font-heading">Documents</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="font-heading">
+                            Previous Actions
+                        </p>
+                        <table class="table table-responsive table-bordered table-striped">
+                            <thead class="bg-dark text-white">
+                                <th>Officer</th>
+                                <th>Action</th>
+                                <th>Remarks</th>
+                            </thead>
+                            <tbody id="previousActions"></tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
