--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -27,11 +27,13 @@
                         <p class="font-heading">Documents</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-2">
                     <div class="col-sm-12">
                         <p class="font-heading">
                             Previous Actions
                         </p>
+                    </div>
+                    <div class="col-sm-12">
                         <table class="table table-responsive table-bordered table-striped">
                             <thead class="bg-dark text-white">
                                 <th>Officer</th>
