--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -28,7 +28,7 @@
     </div>
     <partial name="AdminNavbar" />
     <partial name="Sidebar" />
-    <div class="full-screen-section d-flex">
+    <div class="full-screen-section d-flex mt-0">
         <div class="sidebar-admin-section">
 
         </div>
