--- a/Views/Home/OfficerRegistration.cshtml
+++ b/Views/Home/OfficerRegistration.cshtml
@@ -1,7 +1,7 @@
 <form id="registration">
-    <div class="full-screen-section px-2 mb-5">
+    <div class="full-screen-section px-2 mb-5" style="min-height: 120vh;">
         <div class="container border shadow-lg margin-center mb-5" style="border-radius: 15px;overflow: hidden;">
-            <div class="row" style="min-height: 50vh;">
+            <div class="row">
                 <div class="col-sm-12 center-align flex-column rounded-border shadow-lg py-3" id="registerContainer">
                     <p class="form-heading text-center">Register</p>
                     <div class="container d-flex flex-column">
@@ -24,12 +24,15 @@
                         <select class="form-select mb-2 border-0 border-bottom rounded-0" name="designation"
                             id="designation">
                         </select>
-                        <label for="Select Postioned District">Select Postioned District</label>
-                        <select class="form-select mb-2 border-0 border-bottom rounded-0" name="District" id="District">
-                        </select>
-                        <label for="Select Postioned Tehsil">Select Postioned Tehsil</label>
-                        <select class="form-select mb-2 border-0 border-bottom rounded-0" name="Tehsil" id="Tehsil">
-                        </select>
+                        <div id="dynamicFields">
+                            <label for="Select Postioned District">Select Postioned District</label>
+                            <select class="form-select mb-2 border-0 border-bottom rounded-0" name="District"
+                                id="District">
+                            </select>
+                            <label for="Select Postioned Tehsil">Select Postioned Tehsil</label>
+                            <select class="form-select mb-2 border-0 border-bottom rounded-0" name="Tehsil" id="Tehsil">
+                            </select>
+                        </div>
                         <div class="d-flex justify-content-between border rounded-pill mb-2">
                             <span id="captchaCanvas"
                                 class="captchaCanvas d-flex justify-content-center align-items-center w-75 p-0"></span>
